# WebApp

./: README.md
cgi_form/: CMakeLists.txt  main.cpp
cgi_reviews/: CMakeLists.txt  main.cpp
localhost/: form.html  index.html  reviews.html
localhost/css/: style.css
